added trailer section to the single movie page

--- a/index.html
+++ b/index.html
@@ -129,4 +129,50 @@
 
 
 
-<img src="" alt="">
+
+<!-- <div class="container mx-auto  ">
+  <div class="text-center">
+    <img id="movie-backdrop" src=${BACKDROP_BASE_URL + movie.backdrop_path}>
+  </div>
+  <div class="container flex flex-col md:flex-row md:space-x-12">
+    <div class="left w-1/2">  
+      <div class="">
+        <h1 id="movie-title" class='text-4xl font-bold'>${movie.title}</h1>
+        <p id="movie-release-date"><b>Release Date:</b> ${movie.release_date}</p>
+        <p id="movie-runtime"><b>Runtime:</b> ${movie.runtime} Minutes</p>
+        <h3 class='font-bold'>Overview:</h3>
+        <p id="movie-overview">${movie.overview}</p>
+        <h3 class='font-bold'>Language:</h3>
+        <p> ${movie.original_language}  </p>
+        <h3 class='font-bold'>Director:</h3>
+        <p> ${director.name} </p>
+     </div>
+    </div>
+    <div class="right w-1/2">
+      <h1 class='text-3xl font-bold'>Trailer</h1>
+    </div>
+  </div>
+  <div id="Actors">
+    <h3 class='text-3xl font-bold'>Actors:</h3>
+    <ul id="actors" class="container flex flex-wrap space-x-12   gap-y-6 py-6">
+   ${slicedActs.map(actor => `
+      <li>
+        <img width='100' height='100' class='rounded-full' src=${BACKDROP_BASE_URL + actor.profile_path} alt='${actor.name}'>
+        <p class=''> ${actor.name} </p>
+      </li>
+    `).join('')}
+    </ul>
+   </div>
+   <div id="relatedMovies">
+    <h3 class='text-3xl font-bold'>Related movies</h3>
+    <ul id="actors" class="container flex flex-wrap space-x-12  gap-y-6 py-6">
+       ${slicedSimilar.map(similar => `
+       <li>
+       <img onclick="similarClick()" width='150' height='150' class='rounded-full' src=${BACKDROP_BASE_URL + similar.backdrop_path} alt='${similar.title}'>
+       <p class=''> ${similar.title} </p>
+     </li>
+       `).join('')}
+    </ul>
+   </div>
+</div>
+ -->
