--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="hidden space-x-2 md:block">
         <a href="index.html" class="hover:bg-yellow-300 hover:text-black rounded-md p-1.5">Home</a>
         <a  href="#" class="actorsPage hover:bg-yellow-300 hover:text-black rounded-md p-1.5">Actors</a>
-        <a href="#" class="hover:bg-yellow-300 hover:text-black rounded-md p-1.5">About</a>
+        <a href="#" id="aboutButton" class="hover:bg-yellow-300 hover:text-black rounded-md p-1.5">About</a>
         <a href="#" class="genre-menu hover:bg-yellow-300 hover:text-black rounded-md p-1.5">Genre <i
             class="fa-solid fa-caret-down genre-caret"></i></a>
 
